fix: use my own layout restoration strategy
1. make burly also restore files
2. integrate burly and tabspaces

--- a/.gitmodules
+++ b/.gitmodules
@@ -303,7 +303,7 @@
 	ignore = untracked
 [submodule "leetcode"]
 	path = site-lisp/leetcode
-	url = https://github.com/Elilif/leetcode.el
+	url = https://github.com/kaiwk/leetcode.el
 	ignore = untracked
 [submodule "link-hint"]
 	path = site-lisp/link-hint
