chore: Update 6 drones
Update anki-helper   to v1.0.0-29-g5b593c1
Update embark        to  0.21-230-gb9f2b3b
Update lsp-mode      to  8.0.0-659-g01bd566c0
Update org-doc-noter to  e557303
Update rime          to v1.0.5-17-gc63881d
Update svg-lib       to  d00a253

--- a/.gitmodules
+++ b/.gitmodules
@@ -249,6 +249,10 @@
 	path = site-lisp/graphql
 	url = https://github.com/vermiculus/graphql.el
 	ignore = untracked
+[submodule "hackernews"]
+	path = site-lisp/hackernews
+	url = https://github.com/clarete/hackernews.el
+	ignore = untracked
 [submodule "helpful"]
 	path = site-lisp/helpful
 	url = https://github.com/Wilfred/helpful
