chore: CHANGE 58 drones
Update alert                 to v1.3-34-g7774b5f
Update avy                   to  0.5.0-35-gbe61211
Update borg                  to v3.3.1-132-g94b9be7
Update cape                  to  0.12-166-gc56cd95
Update ccls                  to  9b4a47e
Update closql                to v1.2.1-38-gdc8cacb
Update consult               to  0.32-213-gde0ed45
Update consult-dir           to v0.1-11-g3f5f4b7
Update corfu                 to  0.34-201-gba38c4d
Update dash                  to  2.19.1-39-g13f9fcd
Update electric-operator     to  1.1.0-99-g8cb4874
Update elfeed                to  3.4.1-8-g55fb162
Update elfeed-org            to  d62d23e
Update elfeed-score          to  1.2.6-12-gcc1a05a
Update emacsql               to  3.1.1-64-gfdcf447
Update embark                to  0.21-244-g60139db
Update emms                  to  15-87-g1d7547f
Update epkg                  to v3.3.3-90-g4a24534
Update ess                   to ESSRv1.8-92-gab2faeca
Update f                     to v0.20.0-118-g4f03d7b
Update forge                 to v0.3.2-417-g8d159dc
Update helpful               to  0.19-37-ga32a5b3
Update ht                    to  2.3-12-g1c49aad
Update htmlize               to release/1.56-9-g09d43df
Update js2-mode              to  20220710-13-gca0af32
Update link-hint             to v0.1-125-g9153eaf
Update llama                 to v0.2.0-24-g05c14ca
Update lsp-mode              to  8.0.0-689-g1666460a9
Update lsp-pyright           to  0.2.0-16-g2f2631a
Update lsp-ui                to  8.0.1-11-gbc58c66
Update magit                 to v3.3.0-878-g12c5a9dc
Update magit-todos           to  1.5.3-60-g1e9acc0
Update marginalia            to  1.0-70-gea356eb
Update markdown-mode         to v2.5-135-ge096bb9
Update mini-echo             to v0.7.1-7-gcd58b8d
Update nov                   to  0.4.0-11-gcc31ce0
Update org-clock-convenience to  5a9e32a
Update org-doc-noter         to  0e5b829
Update org-pdftools          to  4e42023
Update org-reverse-datetree  to 

--- a/.gitmodules
+++ b/.gitmodules
@@ -309,8 +309,6 @@
 	ignore = untracked
 [submodule "lsp-mode"]
 	path = site-lisp/lsp-mode
-    load-path = .
-    load-path = clients
 	url = https://github.com/emacs-lsp/lsp-mode
 	ignore = untracked
 [submodule "lsp-pyright"]
@@ -667,6 +665,10 @@
 [submodule "tide"]
 	path = site-lisp/tide
 	url = https://github.com/ananthakumaran/tide
+	ignore = untracked
+[submodule "transient"]
+	path = site-lisp/transient
+	url = https://github.com/magit/transient
 	ignore = untracked
 [submodule "treepy"]
 	path = site-lisp/treepy
