--- a/.gitmodules
+++ b/.gitmodules
@@ -311,6 +311,10 @@
 	path = site-lisp/log4e
 	url = https://github.com/aki2o/log4e
 	ignore = untracked
+[submodule "lorem-ipsum"]
+	path = site-lisp/lorem-ipsum
+	url = https://github.com/jschaf/emacs-lorem-ipsum
+	ignore = untracked
 [submodule "lsp-mode"]
 	path = site-lisp/lsp-mode
     load-path = .
@@ -453,6 +457,10 @@
 	path = site-lisp/org-contrib
     load-path = lisp
 	url = git@github.com:emacsmirror/org-contrib.git
+	ignore = untracked
+[submodule "org-count-words"]
+	path = site-lisp/org-count-words
+	url = git@github.com:Elilif/org-count-words.git
 	ignore = untracked
 [submodule "org-doc-noter"]
 	path = site-lisp/org-doc-noter
